# aiscript-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
aiscript/: Cargo.toml  LICENSE
aiscript-v0/: .gitignore  Cargo.toml
aiscript-v0/examples/: console.rs  parse.rs  run.rs
aiscript-v0/src/: error.rs  interpreter.rs  lib.rs  node.rs  parser.rs  type.rs
aiscript-v0/src/interpreter/: builder.rs  frame.rs  primitive_props.rs  scope.rs  stack.rs  util.rs  value.rs
aiscript-v0/src/interpreter/lib/: std.rs
aiscript-v0/src/interpreter/lib/std/: seedrandom.rs
aiscript-v0/src/parser/: node.rs  parser.rs  visit.rs
aiscript-v0/src/parser/plugins/: set_attribute.rs  transform_chain.rs  validate_keyword.rs  validate_type.rs
aiscript-v0/tests/: test.rs
aiscript-v1/: .gitignore  Cargo.toml
aiscript-v1/examples/: parse.rs  repl.rs  start.rs
aiscript-v1/src/: constants.rs  error.rs  interpreter.rs  lib.rs  node.rs  parser.rs  type.rs
aiscript-v1/src/interpreter/: builder.rs  frame.rs  primitive_props.rs  scope.rs  stack.rs  util.rs  value.rs
aiscript-v1/src/interpreter/lib/: std.rs
aiscript-v1/src/interpreter/lib/std/: random.rs  seedrandom.rs  uri_encoding.rs
aiscript-v1/src/interpreter/lib/std/random/: chacha20.rs  seedrandom.rs
aiscript-v1/src/parser/: plugins.rs  scanner.rs  syntaxes.rs  token.rs  visit.rs
aiscript-v1/src/parser/plugins/: validate_jump_statement.rs  validate_keyword.rs  validate_type.rs
aiscript-v1/src/parser/syntaxes/: common.rs  expressions.rs  statements.rs  toplevel.rs  types.rs
aiscript-v1/tests/: identifiers.rs  index.rs  interpreter.rs  jump_statements.rs  literals.rs  newline.rs  primitive_props.rs  std.rs  syntax.rs  types.rs
aiscript-v1/tests/testutils/: mod.rs
aiscript/src/: lib.rs
examples/: console.rs  parse.rs  run.rs
src/: constants.rs  error.rs  interpreter.rs  lib.rs  node.rs  type.rs
src/interpreter/: primitive_props.rs  util.rs  value.rs  variable.rs
src/interpreter/lib/: std.rs
src/interpreter/lib/std/: seedrandom.rs  uri_encoding.rs
src/parser/: node.rs  parser.rs  plugins.rs
src/parser/plugins/: transform_chain.rs  validate_type.rs
tests/: test.rs
