[package]
name = "aiscript-v0"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
futures = "0.3"
indexmap = "2.3"
peg = "0.8"
percent-encoding = "2.3"
rand = "0.9"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
unicode-segmentation = "1.11"
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
rustyline = "16.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
